# rust-indexed-db

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml  semantic.yml
.github/actions/changelog/: action.yml
.github/actions/prep-release/: action.yml
.github/actions/release/: action.yml
.github/generate-changelog/: index.js  package-lock.json  package.json
.github/workflows/: _test.yml  core.yml  release-crate.yml  release.yml  test-changelog-generator.yml  test.yml  unit-test.yml
MIGRATING/: v0.6.0.md
internal_macros/: Cargo.toml  README.md
internal_macros/src/: build_into_fut.rs  callback_bounds.rs  errdoc.rs  from_dom_exception.rs  generate_with.rs  generic_bounds.rs  lib.rs  poll_unpinned.rs  serrdoc.rs  struct_name.rs  struct_name_debug.rs
internal_macros/src/commons/: attr_stream.rs  fn_target.rs  mod.rs
internal_macros/src/errdoc/: namespace.rs
src/: build.rs  cursor.rs  database.rs  date.rs  dom_string_iterator.rs  error.rs  factory.rs  idb_cursor.rs  idb_database.rs  idb_index.rs  idb_key_path.rs  idb_object_store.rs  idb_query_source.rs  idb_transaction.rs  index.rs  internal_utils.rs  internals.rs  key_path.rs  key_range.rs  lib.rs  object_store.rs  prelude.rs  primitive.rs  query_source.rs  serde.rs  test_util.rs  transaction.rs  typed_array.rs
src/cursor/: base_cursor.rs  cursor_sys.rs  key_cursor.rs  stream.rs  update.rs
src/database/: db_sys.rs  store_builder.rs  store_name.rs  store_params.rs  tx_builder.rs  version_change.rs  version_change_event.rs  version_change_listener.rs
src/error/: dom_exception.rs  js_error.rs  open_db.rs  open_db_op.rs  serde.rs  serialisation.rs  simple_value.rs  unexpected_data.rs
src/factory/: db_version.rs  list_dbs.rs  req_builder.rs
src/future/: array_map.rs  basic.rs  count.rs  cursor.rs  cursor_next.rs  get_all.rs  list_dbs.rs  maybe_errored.rs  mod.rs  open_db.rs  primitive.rs  request.rs  serde.rs  traits.rs
src/future/open_db/: listener.rs  listeners.rs
src/future/request/: listeners.rs  untyped.rs
src/idb_cursor/: idb_cursor_with_value.rs
src/idb_database/: idb_version_change_event.rs
src/idb_object_store/: idb_object_store_parameters.rs
src/idb_transaction/: idb_transaction_future.rs  idb_transaction_listeners.rs  idb_transaction_result.rs
src/idb_transaction/idb_transaction_listeners/: internal_result.rs
src/index/: index_builder.rs  object_store_ext.rs  params.rs
src/iter/: array_map.rs  dom_string_list.rs  get_all.rs  list_dbs.rs  mod.rs
src/object_store/: add_put.rs  delete.rs  serde.rs
src/primitive/: from_js.rs  switch.rs  try_to_js.rs
src/query_source/: count.rs  cursor.rs  get.rs  get_all.rs  get_key.rs
src/request/: idb_open_db_request_ref.rs  idb_request_ref.rs  mod.rs  open_db_request.rs  request_like.rs  void_open_db_request.rs  void_request.rs
src/request/futures/: count_future.rs  idb_cursor_advancement_future.rs  idb_cursor_future.rs  idb_cursor_with_value_future.rs  idb_open_db_request_future.rs  idb_request_future.rs  jscast_request_future.rs  map.rs  mod.rs  optional_jsval_future.rs  void_future.rs
src/request/futures/cursor/: idb_cursor_advancement_future.rs  idb_cursor_future.rs  idb_cursor_with_value_future.rs  mod.rs
src/transaction/: base.rs  listeners.rs  on_done.rs  options.rs  tx_sys.rs
test/: Cargo.toml
test/src/: key_path.rs  lib.rs
test/src/database/: delete_and_list.rs  delete_obj_store.rs  mod.rs  open.rs
test/src/index/: create.rs  mod.rs  query_source.rs
test/src/index/query_source/: cursor.rs
test/src/object_store/: clear.rs
test/src/object_store/query_source/: cursor.rs
test/src/transaction/: commit_rollback.rs  mod.rs
test/src/utils/: conditional_build.rs  dummy_data.rs  init.rs  mod.rs
tests/: browser.rs  dedicated_worker.rs  shared_worker.rs  worker.rs
tests/tests/: date.rs  example_reproductions.rs  mod.rs  primitive.rs
tests/tests/database/: delete_and_list.rs  mod.rs  obj_store_create.rs  open.rs  transaction.rs  versionchange.rs
tests/tests/index/: query_source.rs
tests/tests/index/query_source/: cursor.rs
tests/tests/object_store/: add_put.rs  delete.rs  mod.rs  query_source.rs
tests/tests/object_store/query_source/: cursor.rs  key_path.rs
tests/tests/transaction/: commit_rollback.rs  mod.rs  on_done.rs
tests/tests/utils/: conditional_build.rs  dummy_data.rs  mod.rs
