[package]
name = "indexed_db_futures"
version = "0.5.0"
authors = ["Arturas Molcanovas <amolc@protonmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
description = "Future bindings for IndexedDB via web_sys"
repository = "https://github.com/Alorel/rust-indexed-db"
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
categories = ["asynchronous", "database", "wasm", "web-programming"]
include = [
    "src/",
    "Cargo.toml",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "doc_cfg",
]

[features]
default = [
    "cursors",
    "indices"
]
cursors = [
    "web-sys/IdbCursor",
    "web-sys/IdbCursorWithValue",
    "web-sys/IdbCursorDirection"
]
indices = [
    "web-sys/IdbIndex",
    "web-sys/IdbIndexParameters"
]
nightly = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies]
accessory = "2"
cfg-if = "1"
delegate-display = "2"
fancy_constructor = "1.2"
js-sys = "0.3.64"
uuid = {version = "1.8", features = ["v4", "js"]}
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "DomException",
    "DomStringList",
    "Event",
    "EventTarget",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
    "WorkerGlobalScope",
]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(doc_cfg)'] }
