[package]
name = "indexed_db_futures_macros_internal"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Arturas Molcanovas <amolc@pm.me>"]
description = "Internal macros for the `indexed_db_futures` crate"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
macroific = { workspace = true, features = ["attr_parse"] }
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true, features = ["full"]}
